<resources>
    <string name="app_name">GB_Movie</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_favorite">Favorites</string>
    <string name="menu_title_ratings">Ratings</string>
    <string name="search_hint">Search</string>
    <string name="no_like">no like</string>
    <string name="like">like</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="runtime">Runtime</string>
    <string name="releaseDate">releaseDate</string>
    <string name="poster">Poster</string>
    <string name="settings">Settings</string>
    <string name="adult_content">Взрослый контент</string>
    <string name="add_to_favorites">Movie added to favorites</string>
    <string name="remove_from_favorites"><![CDATA[>Movie removed from favorites]]></string>
    <string name="title_contacts">Contacts</string>
    <string name="contacts">Access to contacts is prohibited</string>
</resources>