<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_title_home"/>
    <item
        android:id="@+id/favorite_page"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_title_favorite"/>
    <item
        android:id="@+id/rating_page"
        android:enabled="true"
        android:icon="@drawable/ic_rating"
        android:title="@string/menu_title_ratings"/>
    <item
        android:id="@+id/setting_page"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        />
    <item
        android:id="@+id/navigation_contacts"
        android:enabled="true"
        android:icon="@drawable/ic_telephone"
        android:title="@string/title_contacts" />

</menu>