<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                tools:context=".fragments.InfoFragment">

                <ProgressBar
                    android:id="@+id/progressBarInfo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="168dp"
                    android:layout_height="240dp"
                    android:layout_margin="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/poster" />

                <ImageView
                    android:id="@+id/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_sharp_favorite_border_24"
                    android:tag="@string/no_like"
                    app:layout_constraintEnd_toEndOf="@+id/poster"
                    app:layout_constraintTop_toTopOf="@+id/poster"
                    android:contentDescription="@string/like" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/poster"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"/>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/poster"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:id="@+id/budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/poster"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/budget"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/release_date"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/revenue"
                    app:layout_constraintTop_toBottomOf="@id/overview"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"/>




            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</layout>